--- a/PrinterySystem/PrinterySystem.csproj
+++ b/PrinterySystem/PrinterySystem.csproj
@@ -123,8 +123,11 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManagerController.cs" />
+    <Compile Include="Controllers\Person4ManagerController.cs" />
+    <Compile Include="Controllers\PersonController.cs" />
     <Compile Include="Controllers\SystemOpController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -290,13 +293,23 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
-    <Content Include="Views\SystemOp\Dashborad.cshtml" />
+    <Content Include="Views\SystemOp\Dashborad4employee.cshtml" />
     <Content Include="Views\Shared\_LayoutSys.cshtml" />
     <Content Include="Views\Manager\OrderManagement.cshtml" />
+    <Content Include="Views\SystemOp\Dashborad4Manager.cshtml" />
+    <Content Include="Views\Shared\_LayoutSysManager.cshtml" />
+    <Content Include="Views\Manager\StockManagement.cshtml" />
+    <Content Include="Views\Manager\CustomerManagement.cshtml" />
+    <Content Include="Views\Manager\EmployeeManagement.cshtml" />
+    <Content Include="Views\Person4Manager\CustomerInfo.cshtml" />
+    <Content Include="Views\Person4Manager\EmployeeInfo.cshtml" />
+    <Content Include="Views\Person\CustomerInfo.cshtml" />
+    <Content Include="Views\Person\EmployeeInfo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\Employee\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
