--- a/PrinterySystem/PrinterySystem.csproj
+++ b/PrinterySystem/PrinterySystem.csproj
@@ -155,6 +155,7 @@
     <Content Include="Content\Dashboradasset\js\jquery-3.2.1.slim.min.js" />
     <Content Include="Content\imges\icon\logo.jpg" />
     <Content Include="Content\Loginasset\signin.css" />
+    <Content Include="Content\UserInfoAsset\form-validation.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -305,11 +306,18 @@
     <Content Include="Views\Person4Manager\EmployeeInfo.cshtml" />
     <Content Include="Views\Person\CustomerInfo.cshtml" />
     <Content Include="Views\Person\EmployeeInfo.cshtml" />
+    <Content Include="Views\Person4Manager\MyInfo.cshtml" />
+    <Content Include="Views\Manager\PaperStockManagement.cshtml" />
+    <Content Include="Views\Manager\ProductStockManagement.cshtml" />
+    <Content Include="Views\Manager\PrintingInkStockManagement.cshtml" />
+    <Content Include="Views\Manager\WorkflowManagement.cshtml" />
+    <Content Include="Views\Manager\PurchasingManagement.cshtml" />
+    <Content Include="Views\Manager\ProduceManagement.cshtml" />
+    <Content Include="Views\Manager\OrderProcessing.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\Employee\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
