--- a/PrinterySystem/Views/Web.config
+++ b/PrinterySystem/Views/Web.config
@@ -21,11 +21,16 @@
       </namespaces>
     </pages>
   </system.web.webPages.razor>
-
+  
+  
+  
   <appSettings>
     <add key="webpages:Enabled" value="false" />
   </appSettings>
-
+  <connectionStrings>
+    <add name="Printery" connectionString="Integrated Security=SSPI;Persist Security Info=False;User ID=sa;Initial Catalog=printery;Data Source=PC201607281450\SQLSERVER2017" providerName="System.Data.SqlClient" />
+    <add name="Printery4guest" connectionString="Integrated Security=SSPI;Persist Security Info=False;User ID=sa;Initial Catalog=printery4guest;Data Source=PC201607281450\SQLSERVER2017" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.webServer>
     <handlers>
       <remove name="BlockViewHandler"/>
