--- a/Printery.Data/Printery.Data.csproj
+++ b/Printery.Data/Printery.Data.csproj
@@ -72,6 +72,8 @@
     <Compile Include="Model\ProductGoods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Respositories\OrderRespository.cs" />
+    <Compile Include="Respositories\PaperRespository.cs" />
+    <Compile Include="Respositories\ProductRespository.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202004061307368_CreaateBg.resx">
