--- a/Printery.Core/Printery.Core.csproj
+++ b/Printery.Core/Printery.Core.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\alLIDInit.cs" />
     <Compile Include="Utility\PaperHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
