--- a/Printery.Provider/Printery.Provider.csproj
+++ b/Printery.Provider/Printery.Provider.csproj
@@ -52,7 +52,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Provider\InkProvider.cs" />
     <Compile Include="Provider\OrderProvider.cs" />
+    <Compile Include="Provider\PaperProvider.cs" />
     <Compile Include="Provider\ProductProvider.cs" />
   </ItemGroup>
   <ItemGroup>
