--- a/Printery.Data/Printery.Data.csproj
+++ b/Printery.Data/Printery.Data.csproj
@@ -85,6 +85,10 @@
     <Compile Include="Migrations\202004091052107_addnewcol4Order.designer.cs">
       <DependentUpon>202004091052107_addnewcol4Order.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202004101512209_addProductExpense.cs" />
+    <Compile Include="Migrations\202004101512209_addProductExpense.designer.cs">
+      <DependentUpon>202004101512209_addProductExpense.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Customer.cs" />
     <Compile Include="Model\EmpGroup.cs" />
@@ -99,6 +103,7 @@
     <Compile Include="Model\PowerList.cs" />
     <Compile Include="Model\Product.cs" />
     <Compile Include="Model\ProductGoods.cs" />
+    <Compile Include="Model\ProductionExpense.cs" />
     <Compile Include="Model\SuperUserList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Respositories\EmpRepository.cs" />
@@ -131,6 +136,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202004091052107_addnewcol4Order.resx">
       <DependentUpon>202004091052107_addnewcol4Order.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004101512209_addProductExpense.resx">
+      <DependentUpon>202004101512209_addProductExpense.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
