--- a/Printery.Data/Printery.Data.csproj
+++ b/Printery.Data/Printery.Data.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Model\ProductionExpense.cs" />
     <Compile Include="Model\SuperUserList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Respositories\CustomerRepository.cs" />
     <Compile Include="Respositories\EmpRepository.cs" />
     <Compile Include="Respositories\InkRespository.cs" />
     <Compile Include="Respositories\OrderRespository.cs" />
