--- a/Printery.Domain/Printery.Domain.csproj
+++ b/Printery.Domain/Printery.Domain.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ViewModel\ProductsViewModel.cs" />
     <Compile Include="ViewModel\PurchasingInkViewModel.cs" />
     <Compile Include="ViewModel\PurchasingPaperViewModel.cs" />
+    <Compile Include="ViewModel\TodayFocusViewModel.cs" />
     <Compile Include="ViewModel\UserViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
